--- a/distributor/web/src/main/webapp/common/template.xhtml
+++ b/distributor/web/src/main/webapp/common/template.xhtml
@@ -8,7 +8,7 @@
     <h:head>
         <title><ui:insert name="title">Home</ui:insert></title>
         <!--<link href="https://bootswatch.com/cyborg/bootstrap.min.css" type="text/css" rel="stylesheet"/>-->
-		<link href="https://bootswatch.com/darkly/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+        <link href="https://bootswatch.com/darkly/bootstrap.min.css" type="text/css" rel="stylesheet"/>
     </h:head>
     <h:body>
         <b:container fluid="true">
@@ -25,12 +25,12 @@
                         <f:facet name="heading" >Components</f:facet>   
 
                         <b:listLinks>
-							<b:navLink header="Home" />
-							<b:navLink href="index.xhtml" value="Homepage" icon="home" iconAlign="left"/>
-							
+                            <b:navLink header="Home" />
+                            <b:navLink href="index.xhtml" value="Homepage" icon="home" iconAlign="left"/>
+
                             <b:navLink header="Video's" />
-                            <b:navLink href="index.xhtml" value="Show videos" icon="resize-small" iconAlign="left"/>
-                           
+                            <b:navLink href="video.xhtml" value="Show videos" icon="resize-small" iconAlign="left"/>
+
                         </b:listLinks>
                     </b:panel>
                 </b:column>
