--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -17,7 +17,7 @@
             <b:row>
                 <b:panel>
                     <h:form>
-                        Add Location <p:inputText value="#{video.name}"  label="Enter videoname here" id="location_crt_txt"/> 
+                        Add Video <p:inputText value="#{video.name}"  label="Enter videoname here" id="video_crt_txt"/> 
                         <p:watermark for="video_crt_txt" value="Enter videoname here" id="watermark" />
                         <p:commandButton value="Create" update="@form" actionListener="#{video.create}" />
                         <hr/>
@@ -37,7 +37,7 @@
             <b:row>
                 <h1>Rest Controller</h1>
                 <b:panel>
-                    <a href="rest/videos/" target="blank" >json >> LocationController</a>
+                    <a href="rest/videos/" target="blank" >json >> VideoController</a>
                 </b:panel>
             </b:row>
         </ui:define>
