T336: tekst op xhmtl pagina aangepast

--- a/distributor/web/src/main/webapp/common/template.xhtml
+++ b/distributor/web/src/main/webapp/common/template.xhtml
@@ -14,7 +14,7 @@
         <b:container fluid="true">
             <b:row>
                 <b:jumbotron>
-                    <h1>Hello Sample App</h1>
+                    <h1>Hello Video App</h1>
                     <p>A simple app to have a framework to expose general architecture</p>
                     <!--<p><a class="btn btn-primary btn-lg">Learn more</a></p>-->
                 </b:jumbotron>
