--- a/distributor/web/src/main/webapp/index.xhtml
+++ b/distributor/web/src/main/webapp/index.xhtml
@@ -10,7 +10,7 @@
             Welcome
         </ui:define>
         <ui:define name="content">
-            <h3>A sample app</h3>
+            <h3>A video app</h3>
             Following frameworks and techniques where used
             <ul>
                 <li>
