T337 Eerste commit alles aan de praat gekregen, alle sample applicaties en distributor web applicaties werken. Css map en klasse aangemaakt en getest (background op rood gezet).

--- a/distributor/web/src/main/webapp/common/template.xhtml
+++ b/distributor/web/src/main/webapp/common/template.xhtml
@@ -8,7 +8,9 @@
     <h:head>
         <title><ui:insert name="title">Home</ui:insert></title>
         <!--<link href="https://bootswatch.com/cyborg/bootstrap.min.css" type="text/css" rel="stylesheet"/>-->
-        <link href="https://bootswatch.com/darkly/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+       <link href="https://bootswatch.com/darkly/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+        <link href="./CSS/default.css" type="text/css" rel="stylesheet"/>
+
     </h:head>
     <h:body>
         <b:container fluid="true">
