--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -29,6 +29,11 @@
                             <p:column headerText="Name">
                                 <h:outputText value="#{vid.name}" />
                             </p:column>
+							  <p:column headerText="Action">
+								<a href="video.xhtml?edit=${vid.id}"><i class="fa fa-pencil"></i></a>
+								<a href="video.xhtml?delete=${vid.id}"><i class="fa fa-trash-o"></i></a>
+                            </p:column> 
+							
                         </p:dataTable>
                     </h:form>
                 </b:panel>
