--- a/manager/web-async/src/main/webapp/job.xhtml
+++ b/manager/web-async/src/main/webapp/job.xhtml
@@ -37,7 +37,7 @@
 			<b:row>
 				<h1>Rest Controller</h1>
 				<b:panel>
-					<a href="rest/somethings/" target="blank">json >> LocationController</a>
+					<a href="rest/jobs/" target="blank">json >> LocationController</a>
 				</b:panel>
 			</b:row>
         </ui:define>
