T364 De juiste strutuur aan de client-web gegeven zodat de interface kan worden gebouwd. Samengewerkt met Mukhran.

--- a/client/web/src/main/webapp/common/template.xhtml
+++ b/client/web/src/main/webapp/common/template.xhtml
@@ -14,8 +14,8 @@
         <b:container fluid="true">
             <b:row>
                 <b:jumbotron>
-                    <h1>Hello Sample App</h1>
-                    <p>A simple app to have a framework to expose general architecture</p>
+                    <h1>Hello</h1>
+                    <p>Dit is ons eerste overzichtje en moet dus nog bijgewerkt worden</p>
                     <!--<p><a class="btn btn-primary btn-lg">Learn more</a></p>-->
                 </b:jumbotron>
             </b:row>
@@ -26,7 +26,7 @@
 
                         <b:listLinks>
 							<b:navLink header="Home" />
-							<b:navLink href="index.xhtml" value="Homepage" icon="home" iconAlign="left"/>
+							<b:navLink href="/index.xhtml" value="Homepage" icon="home" iconAlign="left"/>
 							
                             <b:navLink header="Location" />
                             <b:navLink href="location.xhtml" value="Show Locations" icon="resize-small" iconAlign="left"/>
