--- a/manager/web-admin/src/main/webapp/worker.html
+++ b/manager/web-admin/src/main/webapp/worker.html
@@ -8,7 +8,7 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <ui:composition template="./common/template.xhtml">
         <ui:define name="title">
-            Handle Locations
+            Handle Workers
         </ui:define>
         <ui:define name="content">
 			<b:row>
