--- a/client/web/src/main/webapp/index.xhtml
+++ b/client/web/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="./common/template.xhtml">
 
             <ui:define name="title">
-                title
+                test
             </ui:define>
 
             <ui:define name="content">
