--- a/distributor/web/src/main/webapp/index.xhtml
+++ b/distributor/web/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <ui:composition template="./common/template.xhtml">
         <ui:define name="title">
-            Welcome
+            Marnix is lelijk
         </ui:define>
         <ui:define name="content">
             <h3>A video app</h3>
