--- a/manager/web-async/src/main/webapp/index.xhtml
+++ b/manager/web-async/src/main/webapp/index.xhtml
@@ -10,7 +10,7 @@
             Encoding-farm Manager(Async) 
         </ui:define>
         <ui:define name="content">
-            <h3>A sample app 123</h3>
+            <h3>A sample app </h3>
             Following frameworks and techniques where used
             <ul>
                 <li>
