--- a/manager/web-async/src/main/webapp/job.xhtml
+++ b/manager/web-async/src/main/webapp/job.xhtml
@@ -17,7 +17,7 @@
             <b:row>
 				<b:panel>
 					<h:form>
-						Add Job <p:inputText value="#{job.name}"  label="Enter job here" id="job_crt_txt"/> 
+						Add Job <p:inputText value="#{job.jobTitle}"  label="Enter job here" id="job_crt_txt"/> 
 						<p:watermark for="job_crt_txt" value="Enter job here" id="watermark" />
 						<p:commandButton value="Create" update="@form" actionListener="#{job.create}" />
 						<hr/>
@@ -26,8 +26,8 @@
 								<h:outputText value="#{jobs.id}" />
 							</p:column>
 
-							<p:column headerText="Name">
-								<h:outputText value="#{jobs.name}" />
+							<p:column headerText="jobTitle">
+								<h:outputText value="#{jobs.jobTitle}" />
 							</p:column>
 						</p:dataTable>
 					</h:form>
