--- a/manager/web-async/src/main/webapp/index.xhtml
+++ b/manager/web-async/src/main/webapp/index.xhtml
@@ -7,34 +7,12 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <ui:composition template="./common/template.xhtml">
         <ui:define name="title">
-            Encoding-farm Manager(Async) 
+            Encoding-farm Manager(Async) - Admin
         </ui:define>
         <ui:define name="content">
-            <h3>A sample app test 2.0</h3>
-            Following frameworks and techniques where used
-            <ul>
-                <li>
-                    Frontend:
-                    <ul>
-                        <li>Primefaces</li>
-                        <li>Bootfaces</li>
-                        <li>JSF</li>
-                    </ul>
-                </li>
-                <li>
-                    Domain:
-                    <ul>
-                        <li>EJB3</li>
-                        <li>Hibernate</li>
-                    </ul>
-                </li>
-                <li>
-                    Gateways:
-                    <ul>
-                        <li>JAX-RS</li>
-                    </ul>
-                </li>
-            </ul>
+            <div class="thumbnail">
+                <img src="http://netwerken.ovh/project2/video-reel.jpg" />
+            </div>
         </ui:define>
     </ui:composition>
 </html>
