--- a/distributor/web/src/main/webapp/common/template.xhtml
+++ b/distributor/web/src/main/webapp/common/template.xhtml
@@ -10,8 +10,8 @@
         <!--<link href="https://bootswatch.com/cyborg/bootstrap.min.css" type="text/css" rel="stylesheet"/>-->
         <link href="https://bootswatch.com/darkly/bootstrap.min.css" type="text/css" rel="stylesheet"/>
         <link href="./CSS/default.css" type="text/css" rel="stylesheet"/>
-        <link rel="icon" href="http://localhost:8080/web/Images/favicon_dilbert.ico"/><!--dilbert facivon-->
-        <!--<link rel="icon" href="http://localhost:8080/web/Images/favicon_official.ico"/>offival facivon-->
+        <link rel="icon" href="http://localhost:8080/web/Images/favicon_dilbert.ico"/><!--dilbert favicon-->
+        <!--<link rel="icon" href="http://localhost:8080/web/Images/favicon_official.ico"/>official favicon-->
     </h:head>
     <h:body>
         <b:container fluid="true">
