--- a/worker/web/src/main/webapp/job.xhtml
+++ b/worker/web/src/main/webapp/job.xhtml
@@ -25,9 +25,11 @@
                             <p:column headerText="Id">
                                 <h:outputText value="#{j.id}" />
                             </p:column>
-
                             <p:column headerText="Status">
                                 <h:outputText value="#{j.status}" />
+                            </p:column>
+                            <p:column headerText="Request">
+                                <h:outputText value="#{j.reqId}" />
                             </p:column>
                         </p:dataTable>
                     </h:form>
