--- a/worker/web/src/main/webapp/request.xhtml
+++ b/worker/web/src/main/webapp/request.xhtml
@@ -31,6 +31,11 @@
                             <p:column headerText="Jobs" width="22%">
                                 <h:outputText value="#{req.jobs}" />
                             </p:column>
+                            
+                            <p:column exportable="false">
+                            <a href="request.xhtml?edit=#{req.id}" class=" button">Wijzig</a>
+                            <a href="request.xhtml?delete=#{req.id}" class=" button">Verwijder</a>
+                            </p:column>
                         </p:dataTable>
                     </h:form>
                 </b:panel>
