--- a/worker/web/src/main/webapp/job.xhtml
+++ b/worker/web/src/main/webapp/job.xhtml
@@ -31,6 +31,10 @@
                             <p:column headerText="Request">
                                 <h:outputText value="#{j.reqId}" />
                             </p:column>
+                            <p:column exportable="false">
+                            <a href="job.xhtml?edit=#{j.id}" class=" button">Edit</a>
+                            <a href="job.xhtml?delete=#{j.id}" class=" button">Delete</a>
+                            </p:column>
                         </p:dataTable>
                     </h:form>
                 </b:panel>
@@ -39,7 +43,7 @@
             <b:row>
                 <h1>Rest Controller</h1>
                 <b:panel>
-                    <a href="worker/jobs" target="blank" >json >> JobService</a>
+                    <a href="worker/jobs" target="blank" >json >> JobController</a>
                 </b:panel>
             </b:row>
         </ui:define>
