--- a/worker/web/src/main/webapp/job.xhtml
+++ b/worker/web/src/main/webapp/job.xhtml
@@ -31,6 +31,9 @@
                             <p:column headerText="Request">
                                 <h:outputText value="#{j.reqId}" />
                             </p:column>
+                            <p:column headerText="Actions">
+                                <p:commandButton value="Delete" update="@form" actionListener="#{job.remove(j.id)}"/>
+                            </p:column>
                         </p:dataTable>
                     </h:form>
                 </b:panel>
