--- a/manager/web-async/src/main/webapp/job.xhtml
+++ b/manager/web-async/src/main/webapp/job.xhtml
@@ -17,12 +17,12 @@
             <b:row>
 				<b:panel>
 					<h:form>
-						Add Job <p:inputText value="#{job.jobTitle}"  label="Enter job here" id="job_crt_txt"/> 
+                                            Add Job <p:inputText value="#{job.jobTitle}"  label="Enter job here" id="job_crt_txt"/> 
 						<p:watermark for="job_crt_txt" value="Enter job here" id="watermark" />
 						<p:commandButton value="Create" update="@form" actionListener="#{job.create}" />
 						<hr/>
                                                 Delete Job by id <p:inputText value="#{job.deleteId}"  label="Enter id here"/> 
-						<p:watermark for="job_crt_txt" value="Enter id here" id="watermark" />
+						<p:watermark for="job_crt_txt" value="Enter id here" id="watermark2" />
                                                 <p:commandButton value="Delete" update="@form" actionListener="#{job.delete}" />
 						<hr/>
 						<p:dataTable var="jobs" value="#{job.list}">
@@ -31,7 +31,7 @@
 							</p:column>
 
 							<p:column headerText="jobTitle">
-								<h:outputText value="#{jobs.jobTitle}" />
+                                                            <h:outputText value="#{jobs.jobTitle}" />
 							</p:column>
 						</p:dataTable>
 					</h:form>
