--- a/client/web/src/main/webapp/common/template.xhtml
+++ b/client/web/src/main/webapp/common/template.xhtml
@@ -8,43 +8,39 @@
     <h:head>
         <title><ui:insert name="title">Home</ui:insert></title>
         <!--<link href="https://bootswatch.com/cyborg/bootstrap.min.css" type="text/css" rel="stylesheet"/>-->
-		<link href="https://bootswatch.com/darkly/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+		<link href="https://bootswatch.com/flatly/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+		<link rel="stylesheet" href="./resources/css/ef.css"/>
     </h:head>
     <h:body>
         <b:container fluid="true">
+			
+			<b:navBar brand="Encoding Farm" brandHref="index.xhtml" fluid="true">
+				<b:navbarLinks>
+					<b:navLink value="Home" href="index.xhtml" icon="home" iconAlign="left"></b:navLink>
+					<b:navLink value="Locations" href="location.xhtml" icon="resize-small" iconAlign="left"></b:navLink>
+				</b:navbarLinks>
+			</b:navBar>
+			
             <b:row>
                 <b:jumbotron>
                     <h1>Hello</h1>
                     <p>Dit is ons eerste overzichtje en moet dus nog bijgewerkt worden</p>
                     <!--<p><a class="btn btn-primary btn-lg">Learn more</a></p>-->
+					<b:column>
+                        <ui:insert name="content"></ui:insert>
+                    </b:column>
                 </b:jumbotron>
             </b:row>
-            <b:row>
-                <b:column col-sm="3">
-                    <b:panel look="primary" collapsible="false">
-                        <f:facet name="heading" >Components</f:facet>   
-
-                        <b:listLinks>
-							<b:navLink header="Home" />
-							<b:navLink href="/index.xhtml" value="Homepage" icon="home" iconAlign="left"/>
-							
-                            <b:navLink header="Location" />
-                            <b:navLink href="location.xhtml" value="Show Locations" icon="resize-small" iconAlign="left"/>
-                           
-                        </b:listLinks>
-                    </b:panel>
-                </b:column>
-                <b:column col-sm="9">
+			
+            <!--<b:row>
+                <b:column col-sm="12">
                     <b:column>
                         <ui:insert name="content"></ui:insert>
                     </b:column>
                 </b:column>
-            </b:row>
+            </b:row>-->
+			
         </b:container>
-        <b:container fluid="true">
-            <b:row>
-            </b:row>
-        </b:container>
+		
     </h:body>
 </html>
-
