--- a/client/web/src/main/webapp/index.xhtml
+++ b/client/web/src/main/webapp/index.xhtml
@@ -16,14 +16,14 @@
 
             <ui:define name="content">
 			
-<b:panel>
-<h:form >
+<b:panel id="pnlFileUpload">
+<h:form id="frmFileUpload">
 	
     <p:growl id="messages" showDetail="true" />
  
-    <p:fileUpload value="#{fileUploadView.file}" mode="simple" />
- 
-    <p:commandButton value="Submit" ajax="false" actionListener="#{fileUploadView.upload}" disabled="true" />
+    <p:fileUpload id="fileUpload" value="#{fileUploadView.file}" mode="simple"/>
+    <p:commandButton id="btnSubmit" value="Video Uploaden" ajax="false" actionListener="#{fileUploadView.upload}" />
+	
 </h:form>
 </b:panel>		
 				
