--- a/manager/web-async/src/main/webapp/job.xhtml
+++ b/manager/web-async/src/main/webapp/job.xhtml
@@ -4,46 +4,45 @@
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-	  xmlns:p="http://primefaces.org/ui"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html">
     <ui:composition template="./common/template.xhtml">
         <ui:define name="title">
             Handle Jobs
         </ui:define>
         <ui:define name="content">
-			<b:row>
-				<h1>View Component</h1>
-			</b:row>
             <b:row>
-				<b:panel>
-					<h:form>
-                                            Add Job <p:inputText value="#{job.jobTitle}"  label="Enter job here" id="job_crt_txt"/> 
-						<p:watermark for="job_crt_txt" value="Enter job here" id="watermark" />
-						<p:commandButton value="Create" update="@form" actionListener="#{job.create}" />
-						<hr/>
-                                                Delete Job by id <p:inputText value="#{job.deleteId}"  label="Enter id here"/> 
-						<p:watermark for="job_crt_txt" value="Enter id here" id="watermark2" />
-                                                <p:commandButton value="Delete" update="@form" actionListener="#{job.delete}" />
-						<hr/>
-						<p:dataTable var="jobs" value="#{job.list}">
-							<p:column headerText="Id">
-								<h:outputText value="#{jobs.id}" />
-							</p:column>
+                <h1>View Component</h1>
+            </b:row>
+            <b:row>
+                <b:panel>
+                    <h:form id="jobform">
+                        Add Job <p:inputText value="#{job.jobTitle}"  label="Enter job here" id="job_crt_txt"/> 
+                        <p:watermark for="job_crt_txt" value="Enter job here" id="watermark" />
+                        <p:commandButton value="Create" update="@form" actionListener="#{job.create}" />
+                        <hr/>
+                        <p:dataTable var="jobs" value="#{job.list}" id="jobtable">
+                            <p:column headerText="Id">
+                                <h:outputText value="#{jobs.id}" />
+                            </p:column>
 
-							<p:column headerText="jobTitle">
-                                                            <h:outputText value="#{jobs.jobTitle}" />
-							</p:column>
-						</p:dataTable>
-					</h:form>
-				</b:panel>
+                            <p:column headerText="jobTitle">
+                                <h:outputText value="#{jobs.jobTitle}" />
+                            </p:column>
+                            <p:column headerText="Action">
+                                <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="Delete" ajax="true" update="@form" actionListener="#{job.deleteById(jobs.id)}"/>
+                            </p:column>
+                        </p:dataTable>
+                    </h:form>
+                </b:panel>
 
-			</b:row>
-			<b:row>
-				<h1>Rest Controller</h1>
-				<b:panel>
-					<a href="rest/jobs/" target="blank">json >> LocationController</a>
-				</b:panel>
-			</b:row>
+            </b:row>
+            <b:row>
+                <h1>Rest Controller</h1>
+                <b:panel>
+                    <a href="rest/jobs/" target="blank">json >> LocationController</a>
+                </b:panel>
+            </b:row>
         </ui:define>
     </ui:composition>
 </html>
