--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -30,8 +30,9 @@
                                 <h:outputText value="#{vid.name}" />
                             </p:column>
                             <p:column headerText="Action">
-                                <a href="video.xhtml?edit=${vid.id}"><i class="fa fa-pencil"></i></a>
-                                <a href="video.xhtml?delete=${vid.id}"><i class="fa fa-trash-o"></i></a>
+								<p:commandButton value="delete" update="@form" actionListener="#{video.remove(vid.id)}"/>
+                                <!--<a href="video.xhtml?edit=${vid.id}"><i class="fa fa-pencil"></i></a>
+                                <a href="video.xhtml?delete=${vid.id}"><i class="fa fa-trash-o"></i></a>-->
                             </p:column> 
 
                         </p:dataTable>
