--- a/worker/web/src/main/webapp/request.xhtml
+++ b/worker/web/src/main/webapp/request.xhtml
@@ -10,44 +10,81 @@
         <ui:define name="title">
             Handle Requests
         </ui:define>
-        <ui:define name="content">
-            <b:row>
-                <h1>View Component</h1>
-            </b:row>
-            <b:row>
-                <b:panel>
-                    <h:form>
-                        Add Request <p:inputText value="#{requests.path}"  label="Enter video_path here" id="request_crt_txt"/> 
-                        <p:watermark for="request_crt_txt" value="Enter request here" id="watermark" />
-                        <p:commandButton value="Create" update="@form" actionListener="#{requests.create}" />
-                        <hr/>
-                        <p:dataTable var="req" value="#{requests.list}">
-                            <p:column headerText="Id">
-                                <h:outputText value="#{req.id}" />
-                            </p:column>
-                            <p:column headerText="Video Path">
-                                <h:outputText value="#{req.path}" />
-                            </p:column>
-                            <p:column headerText="Jobs" width="22%">
-                                <h:outputText value="#{req.jobs}" />
-                            </p:column>
-                            <p:column headerText="Actions">
-                                <p:commandButton value="Delete" update="@form" actionListener="#{requests.remove(req.id)}"/>
-                            </p:column>
-                        </p:dataTable>
-                    </h:form>
-                </b:panel>
 
-            </b:row>
-            <b:row>
-                <h1>Rest Controller</h1>
-                <b:panel>
-                    <a href="worker/requests" target="blank" >json >> RequestController</a>
-                </b:panel>
-            </b:row>
+
+
+        <ui:define name="content">
+
+            <h:form id="form1"> 
+                <p:growl id="messages" showDetail="true"/>
+                <b:row>
+                    <h1>View Component</h1>
+                </b:row>
+                <b:row>
+                    <b:panel>
+                        <h:form>
+
+                            Add Request <p:inputText value="#{requests.path}"  label="Enter video_path here" id="request_crt_txt"/> 
+                            <p:watermark for="request_crt_txt" value="Enter request here" id="watermark" />
+                            <p:commandButton value="Create" update="@form" actionListener="#{requests.create}" />
+                            <hr/>
+                            <p:dataTable var="req" value="#{requests.list}" editable="true">
+                                <p:ajax event="rowEdit" listener="#{requests.onEdit}" update=":form1:messages" />  
+                                                    <p:ajax event="rowEditCancel" listener="#{requests.onCancel}" update=":form1:messages" /> 
+                                <p:column headerText="Id">
+                                    <p:cellEditor>  
+                                        <f:facet name="output">  
+                                            <h:outputText value="#{req.id}" />  
+                                        </f:facet>  
+                                        <f:facet name="input">  
+                                            <p:inputText value="#{req.id}" style="width:100%"/>  
+                                        </f:facet>  
+                                    </p:cellEditor> 
+                                </p:column>
+                                <p:column headerText="Video Path">
+                                    <p:cellEditor>  
+                                        <f:facet name="output">  
+                                            <h:outputText value="#{req.path}" />  
+                                        </f:facet>  
+                                        <f:facet name="input">  
+                                            <p:inputText value="#{req.path}" style="width:100%"/>  
+                                        </f:facet>  
+                                    </p:cellEditor> 
+                                </p:column>
+                                <p:column headerText="Jobs" width="22%">
+                                    <p:cellEditor>  
+                                        <f:facet name="output">  
+                                            <h:outputText value="#{req.jobs}" />  
+                                        </f:facet>  
+                                        <f:facet name="input">  
+                                            <p:inputText value="#{req.jobs}" style="width:100%"/>  
+                                        </f:facet>  
+                                    </p:cellEditor> 
+                                </p:column>
+                                <p:column style="width: 4%"><p:rowEditor />  </p:column>
+                                <p:column headerText="Actions" style="width: 7%">
+                                    <p:commandButton value="Delete" update="@form" actionListener="#{requests.remove(req.id)}"/>
+                                </p:column>
+                            </p:dataTable>
+                        </h:form>
+                    </b:panel>
+
+                </b:row>
+                <b:row>
+                    <h1>Rest Controller</h1>
+                    <b:panel>
+                        <a href="worker/requests" target="blank" >json >> RequestController</a>
+                    </b:panel>
+                </b:row>
+            </h:form>
         </ui:define>
+
     </ui:composition>
 </html>
+
+
+
+
 
 
 
