--- a/manager/web-async/src/main/webapp/index.xhtml
+++ b/manager/web-async/src/main/webapp/index.xhtml
@@ -5,6 +5,13 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html">
+
+    <style type="text/css">
+        
+        body {background-color: #FFFFFF;}
+        
+    </style>
+
     <ui:composition template="./common/template.xhtml">
         <ui:define name="title">
             Encoding-farm Manager(Async) - Admin
