--- a/worker/web/src/main/webapp/request.xhtml
+++ b/worker/web/src/main/webapp/request.xhtml
@@ -36,7 +36,7 @@
                                         <h:outputText value="#{req.id}" />  
                                     </f:facet>  
                                     <f:facet name="input">  
-                                        <p:inputText value="#{req.id}" style="width:100%"/>  
+                                        <h:outputText value="#{req.id}" style="width:100%; margin-left: 10px"/>  
                                     </f:facet>  
                                 </p:cellEditor> 
                             </p:column>
