--- a/worker/web/src/main/webapp/request.xhtml
+++ b/worker/web/src/main/webapp/request.xhtml
@@ -56,7 +56,7 @@
                                         <h:outputText value="#{req.jobs}" />  
                                     </f:facet>  
                                     <f:facet name="input">  
-                                        <p:inputText value="#{req.jobs}" style="width:100%"/>  
+                                        <h:outputText value="#{req.jobs}" style="width:100%; margin-left: 10px"/>   
                                     </f:facet>  
                                 </p:cellEditor> 
                             </p:column>
