T366: Attributen uitgebreid, index verwijdert, link van navigatie uitgezet, initDb script aangepast

--- a/distributor/web/src/main/webapp/common/template.xhtml
+++ b/distributor/web/src/main/webapp/common/template.xhtml
@@ -29,7 +29,7 @@
 
                         <b:listLinks>
                             <b:navLink header="Home" />
-                            <b:navLink href="index.xhtml" value="Homepage" icon="home" iconAlign="left"/>
+                            <b:navLink href="#" value="Homepage" icon="home" iconAlign="left"/>
 
                             <b:navLink header="Video's" />
                             <b:navLink href="video.xhtml" value="Show videos" icon="resize-small" iconAlign="left"/>
