--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -17,12 +17,20 @@
             <b:row>
                 <b:panel>
                     <h:form>
-                        Add Video <p:inputText value="#{video.name}"  label="Enter videoname here" id="video_crt_txt"/> 
+                        Add Video 
+                        <p:inputText value="#{video.name}"  label="Enter videoname here" id="video_crt_txt"/> 
+                        <!--<p:inputText value="#{video.path}"  label="Enter path here" id="video_crt_path"/> -->
+                        <!--<p:inputText value="#{video.thumbnail}"  label="Enter thumbnailpath here" id="video_crt_thumbnail"/> -->
+                        <p:inputTextarea value="#{video.description}" label="Write a description" id="video_crt_desc"/>
                         <p:watermark for="video_crt_txt" value="Enter videoname here" id="watermark" />
+                        <!--<p:watermark for="video_crt_path" value="Enter path here" id="watermark2" />-->
+                       <!-- <p:watermark for="video_crt_thumbnail" value="Enter thumbnailpath here" id="watermark3" />-->
+                        <p:watermark for="video_crt_desc" value="Write a description" id="watermark4" />
+                        
                         <p:commandButton value="Create" update="@form" actionListener="#{video.create}" />
                         <hr/>
                         <p:dataTable id="tabel" var="vid" value="#{video.list}">
-                            <p:column headerText="Id" style="visibility: hidden">
+                            <p:column headerText="Id" style="display: none">
                                 <h:outputText value="#{vid.id}" />
                             </p:column>
 
@@ -39,9 +47,9 @@
                                 <h:outputText value="#{vid.description}" />
                             </p:column>
                             <p:column headerText="Action">
-							<p:commandButton value="delete" update="@form" actionListener="#{video.remove(vid.id)}"/>
-                                <!--<a href="video.xhtml?edit=${vid.id}"><i class="fa fa-pencil"></i></a>
-                                <a href="video.xhtml?delete=${vid.id}"><i class="fa fa-trash-o"></i></a>-->
+                                <p:commandButton value="delete" update="@form" actionListener="#{video.remove(vid.id)}"/>
+        <!--<a href="video.xhtml?edit=${vid.id}"><i class="fa fa-pencil"></i></a>
+        <a href="video.xhtml?delete=${vid.id}"><i class="fa fa-trash-o"></i></a>-->
                             </p:column> 
 
                         </p:dataTable>
