--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -18,14 +18,14 @@
                 <b:panel>
                     <h:form>
                         Add Video 
-                        <p:inputText value="#{video.name}"  label="Enter videoname here" id="video_crt_txt"/> 
+                        <p:inputText value="#{video.name}"  label="Enter videoname here" id="video_crt_name"/> 
                         <p:inputText value="#{video.videopath}"  label="Enter path here" id="video_crt_path"/>
-                        <!--<p:inputText value="#{video.thumbnail}"  label="Enter thumbnailpath here" id="video_crt_thumbnail"/>-->
+                        <p:inputText value="#{video.thumbnail}" label="Enter thumbnail here" id="video_crt_thumbnail"/>
                         <p:inputTextarea value="#{video.description}" label="Write a description" id="video_crt_desc"/>
 
-                        <p:watermark for="video_crt_txt" value="Enter videoname here" id="watermark" />
+                        <p:watermark for="video_crt_name" value="Enter videoname here" id="watermark" />
                         <p:watermark for="video_crt_path" value="Enter path here" id="watermark2" />
-                        <!--<p:watermark for="video_crt_thumbnail" value="Enter thumbnailpath here" id="watermark3" />-->
+                        <p:watermark for="video_crt_thumbnail" value="Enter thumbnailpath here" id="watermark3" />
                         <p:watermark for="video_crt_desc" value="Write a description" id="watermark4" />
 
                         <p:commandButton value="Create" update="@form" actionListener="#{video.create}" />
