T336 Update volgende stap

--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -31,6 +31,7 @@
                             </p:column>
                             <p:column headerText="Action">
 							<p:commandButton value="delete" update="@form" actionListener="#{video.remove(vid.id)}"/>
+							<p:commandButton value="update" update="@form" actionListener="#{video.update(vid.id)}"/>
                                 <!--<a href="video.xhtml?edit=${vid.id}"><i class="fa fa-pencil"></i></a>
                                 <a href="video.xhtml?delete=${vid.id}"><i class="fa fa-trash-o"></i></a>-->
                             </p:column> 
