--- a/worker/web/src/main/webapp/index.xhtml
+++ b/worker/web/src/main/webapp/index.xhtml
@@ -13,9 +13,12 @@
           Worker Interface
         </ui:define>
          <ui:define name="content">
-        <a href="request.xhtml" style="font-size: 25px; float: left;padding: 100px;margin-top: 50px; text-decoration:none;color:black; background-color: grey; border: solid darkgrey 3px ;margin-left: 10%; width: 35%; text-align: center">Show requests</a>
-        <a href="job.xhtml" style="font-size: 25px;float: right; padding: 100px;margin-top: 50px; text-decoration:none;color:black; background-color: grey; border: solid darkgrey 3px; margin-right: 20%; width: 35%; text-align: center">Show jobs</a>
-        
+             <div style='width: 35%; float: left; margin-top: 50px; margin-left: 15%'>
+                 <a href="request.xhtml"> <img src="fotos/request.jpg" style='width: 400px; height: 250px;'/> </a>    
+            </div>
+             <div style='width: 35%; float: right; margin-top: 50px; margin-right: 15%;'>
+                <a href="job.xhtml"> <img src="fotos/jobs.jpg" style='width: 400px; height: 250px;'/></a>
+             </div>
          </ui:define>
     </ui:composition>  
     
