--- a/client/web/src/main/webapp/common/template.xhtml
+++ b/client/web/src/main/webapp/common/template.xhtml
@@ -17,7 +17,7 @@
 			<b:navBar brand="Encoding Farm" brandHref="index.xhtml" fluid="true">
 				<b:navbarLinks>
 					<b:navLink value="Home" href="index.xhtml" icon="home" iconAlign="left"></b:navLink>
-					<b:navLink value="Locations" href="location.xhtml" icon="resize-small" iconAlign="left"></b:navLink>
+					<b:navLink value="Tasks JSON" href="rest/taskcontroller" icon="resize-small" iconAlign="left"></b:navLink>
 				</b:navbarLinks>
 			</b:navBar>
 			
