--- a/worker/web/src/main/webapp/job.xhtml
+++ b/worker/web/src/main/webapp/job.xhtml
@@ -39,7 +39,7 @@
                                     </f:facet>  
                                 </p:cellEditor> 
                             </p:column>
-                            <p:column headerText="Status">
+                            <p:column headerText="Status" width="22%">
                                 <p:cellEditor>  
                                     <f:facet name="output">  
                                         <h:outputText value="#{j.status}" />  
@@ -60,7 +60,7 @@
                                 </p:cellEditor> 
                             </p:column>
                             <p:column style="width: 4%"><p:rowEditor />  </p:column>
-                            <p:column headerText="Actions" style="width: 7%">
+                            <p:column headerText="Actions" style="width: 10%">
                                 <p:commandButton value="Delete" update="@form" actionListener="#{job.remove(j.id)}"/>
                             </p:column>
                             
