--- a/worker/web/src/main/webapp/request.xhtml
+++ b/worker/web/src/main/webapp/request.xhtml
@@ -40,7 +40,7 @@
                                     </f:facet>  
                                 </p:cellEditor> 
                             </p:column>
-                            <p:column headerText="Video Path">
+                            <p:column headerText="Video Path" width="22%">
                                 <p:cellEditor>  
                                     <f:facet name="output">  
                                         <h:outputText value="#{req.path}" />  
@@ -61,7 +61,7 @@
                                 </p:cellEditor> 
                             </p:column>
                             <p:column style="width: 4%"><p:rowEditor />  </p:column>
-                            <p:column headerText="Actions" style="width: 7%">
+                            <p:column headerText="Actions" style="width: 10%">
                                 <p:commandButton value="Delete" update="@form" actionListener="#{requests.remove(req.id)}"/>
                             </p:column>
                         </p:dataTable>
