--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -11,10 +11,10 @@
             Handle Videos
         </ui:define>
         <ui:define name="content">
-            <b:row>
+<!--            <b:row>
                 <h1>View Component</h1>
-            </b:row>
-            <b:row>
+            </b:row>-->
+<b:row>
                 <b:panel>
                     <h:form>
                         Add Video 
